2023-07-08T08:10:12Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/andry81-devops/actions/runs/5493463756 # 987
* notice: Stats Output Repository: https://github.com/andry81-stats/gh-workflow--gh-stats/commits?branch=master&time_zone=utc&until=2023-07-08
* notice: last 14d: unq all: 36 5512
* notice: prev accum: outdated-unq outdated-all / unq all: 1477 135704 / 1545 141271
* notice: next accum: outdated-unq outdated-all / unq all: 1477 135704 / 1547 141404
* notice: prev exec diff / last date diff / accum: unq all: +2 +133 -0 -161 / +2 +133 -0 -0 / 2 133
* notice: removed / changed dates: [] / [2023-06-24 2023-07-08]

2023-07-08T00:53:55Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/andry81-devops/actions/runs/5491791222 # 986
* notice: Stats Output Repository: https://github.com/andry81-stats/gh-workflow--gh-stats/commits?branch=master&time_zone=utc&until=2023-07-08
* notice: last 14d: unq all: 36 5540
* notice: prev accum: outdated-unq outdated-all / unq all: 1474 135312 / 1545 141155
* notice: next accum: outdated-unq outdated-all / unq all: 1477 135704 / 1545 141271
* notice: prev exec diff / last date diff / accum: unq all: +0 +116 -0 -27 / +3 +390 -0 -0 / 3 390
* notice: removed / changed dates: [2023-06-23] / [2023-06-24 2023-07-07]

2023-07-07T16:11:11Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/andry81-devops/actions/runs/5488393094 # 985
* notice: Stats Output Repository: https://github.com/andry81-stats/gh-workflow--gh-stats/commits?branch=master&time_zone=utc&until=2023-07-07
* notice: last 14d: unq all: 36 5514
* notice: prev accum: outdated-unq outdated-all / unq all: 1474 135312 / 1544 141014
* notice: next accum: outdated-unq outdated-all / unq all: 1474 135312 / 1545 141155
* notice: prev exec diff / last date diff / accum: unq all: +1 +141 -1 -140 / +3 +274 -0 -0 / 3 274
* notice: removed / changed dates: [] / [2023-06-23 2023-07-07]

2023-07-07T08:11:51Z: