@@ -1,9 +1,9 @@
 {
-  "timestamp" : "2023-07-08T08:10:12Z",
-  "count" : 202,
-  "count_minmax" : [ 133, 390 ],
-  "count_decinc" : [ -188, +390 ],
-  "uniques" : 2,
-  "uniques_minmax" : [ 2, 2 ],
-  "uniques_decinc" : [ -0, +2 ]
+  "timestamp" : "2023-07-08T16:10:12Z",
+  "count" : 63,
+  "count_minmax" : [ 63, 390 ],
+  "count_decinc" : [ -327, +390 ],
+  "uniques" : 1,
+  "uniques_minmax" : [ 1, 2 ],
+  "uniques_decinc" : [ -1, +2 ]
 }
