@@ -1,9 +1,9 @@
 {
-  "timestamp" : "2023-07-08T08:10:12Z",
-  "count" : 133,
-  "count_minmax" : [ 133, 133 ],
-  "count_decinc" : [ -0, +133 ],
-  "uniques" : 2,
-  "uniques_minmax" : [ 2, 2 ],
-  "uniques_decinc" : [ -0, +2 ]
+  "timestamp" : "2023-07-08T16:10:12Z",
+  "count" : 249,
+  "count_minmax" : [ 133, 249 ],
+  "count_decinc" : [ -0, +249 ],
+  "uniques" : 3,
+  "uniques_minmax" : [ 2, 3 ],
+  "uniques_decinc" : [ -0, +3 ]
 }
