@@ -1,18 +1,18 @@
 {
-  "timestamp" : "2023-07-08T08:10:12Z",
+  "timestamp" : "2023-07-08T16:10:12Z",
   "count_outdated" : 135704,
   "uniques_outdated" : 1477,
-  "count" : 141404,
-  "uniques" : 1547,
+  "count" : 141520,
+  "uniques" : 1548,
   "clones" : [
     {
       "timestamp": "2023-06-24T00:00:00Z",
-      "count": 202,
-      "count_minmax": [ 133, 390 ],
-      "count_decinc": [ 188, 390 ],
-      "uniques": 2,
-      "uniques_minmax": [ 2, 2 ],
-      "uniques_decinc": [ 0, 2 ]
+      "count": 63,
+      "count_minmax": [ 63, 390 ],
+      "count_decinc": [ 327, 390 ],
+      "uniques": 1,
+      "uniques_minmax": [ 1, 2 ],
+      "uniques_decinc": [ 1, 2 ]
     },
     {
       "timestamp": "2023-06-25T00:00:00Z",
@@ -133,12 +133,12 @@
     },
     {
       "timestamp": "2023-07-08T00:00:00Z",
-      "count": 133,
-      "count_minmax": [ 133, 133 ],
-      "count_decinc": [ 0, 133 ],
-      "uniques": 2,
-      "uniques_minmax": [ 2, 2 ],
-      "uniques_decinc": [ 0, 2 ]
+      "count": 249,
+      "count_minmax": [ 133, 249 ],
+      "count_decinc": [ 0, 249 ],
+      "uniques": 3,
+      "uniques_minmax": [ 2, 3 ],
+      "uniques_decinc": [ 0, 3 ]
     }
   ]
 }
