@@ -1,11 +1,11 @@
 {
-  "count": 5512,
+  "count": 5489,
   "uniques": 36,
   "clones": [
     {
       "timestamp": "2023-06-24T00:00:00Z",
-      "count": 202,
-      "uniques": 2
+      "count": 63,
+      "uniques": 1
     },
     {
       "timestamp": "2023-06-25T00:00:00Z",
@@ -74,8 +74,8 @@
     },
     {
       "timestamp": "2023-07-08T00:00:00Z",
-      "count": 133,
-      "uniques": 2
+      "count": 249,
+      "uniques": 3
     }
   ]
 }
